fixed clipping 2

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: auto;
   width: 100%;
   /* overflow: auto; */
 
